--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "effect": "^3.13.10"
+    "effect": "^3.13.10",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
