--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "18.16.9",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
+    "electron": "^35.0.1",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
