--- a/packages/electron-ext/package.json
+++ b/packages/electron-ext/package.json
@@ -20,5 +20,10 @@
   "peerDependencies": {
     "electron": "^35.0.1",
     "rxjs": "^7.8.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ckapps/ts-libs",
+    "directory": "packages/electron-ext"
   }
 }
