--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -19,5 +19,10 @@
   ],
   "peerDependencies": {
     "effect": "^3.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ckapps/ts-libs",
+    "directory": "packages/math"
   }
 }
