--- a/packages/rxjs-ext/package.json
+++ b/packages/rxjs-ext/package.json
@@ -22,5 +22,10 @@
     "@ckapp/math": "workspace:*",
     "effect": "^3.0.0",
     "rxjs": "^7.5.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ckapps/ts-libs",
+    "directory": "packages/rxjs-ext"
   }
 }
