--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,10 @@ jobs:
         run: npx nx report
         shell: bash
 
+      - name: Build packages
+        run: pnpm dlx nx run-many -t build
+        shell: bash
+
       - name: Publish packages
         run: npx nx release publish
         shell: bash
