--- a/.github/workflows/publish-pre.yml
+++ b/.github/workflows/publish-pre.yml
@@ -1,16 +1,19 @@
-name: Publish
+name: Publish (pre)
 
 on:
-  push:
-    tags:
-      - '+@[0-9]+.[0-9]+.[0-9]+'
+  workflow_dispatch:
+    inputs:
+      preid:
+        description: 'Prerelease identifier to apply to the version.'
+        required: true
+        default: 'next'
 
 jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       id-token: write # needed for provenance data generation
     timeout-minutes: 10
     steps:
@@ -32,12 +35,17 @@ jobs:
         run: pnpm dlx nx report
         shell: bash
 
-      - name: Build packages
-        run: pnpm dlx nx run-many -t build
+      - name: Setup git user
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
+
+      - name: Create release
+        run: pnpm dlx nx release --skip-publish --preid=${{ github.event.inputs.preid }}
         shell: bash
 
-      - name: Publish packages (latest)
-        run: pnpm dlx nx release publish
+      - name: Publish packages (pre-release)
+        run: pnpm dlx nx release publish --tag=${{ github.event.inputs.preid }}
         shell: bash
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
