ci: provide github token to create release

--- a/.github/workflows/publish-pre.yml
+++ b/.github/workflows/publish-pre.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: 'next'
 
+env:
+  # NX release needs to have a GH token in env.GITHUB_TOKEN
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   publish:
     name: Publish
