--- a/packages/math/project.json
+++ b/packages/math/project.json
@@ -20,6 +20,7 @@
           "packages/math/src/lib/geometry/Cylinder.ts",
           "packages/math/src/lib/geometry/Sphere.ts",
           "packages/math/src/lib/geometry/Trigonometry.ts",
+          "packages/math/src/lib/geometry/euclidean/Plane.ts",
           "packages/math/src/lib/numbers/Quaternion.ts"
         ]
       }
