--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -12,25 +12,25 @@
       "import": "./dist/index.js",
       "default": "./dist/index.js"
     },
-    "./geometry/Circle": {
-      "types": "./dist/lib/geometry/Circle.d.ts",
-      "import": "./dist/lib/geometry/Circle.js",
-      "default": "./dist/lib/geometry/Circle.js"
+    "./geometry/algebraic/Circle": {
+      "types": "./dist/lib/geometry/algebraic/Circle.d.ts",
+      "import": "./dist/lib/geometry/algebraic/Circle.js",
+      "default": "./dist/lib/geometry/algebraic/Circle.js"
     },
-    "./geometry/Cone": {
-      "types": "./dist/lib/geometry/Cone.d.ts",
-      "import": "./dist/lib/geometry/Cone.js",
-      "default": "./dist/lib/geometry/Cone.js"
+    "./geometry/algebraic/Cone": {
+      "types": "./dist/lib/geometry/algebraic/Cone.d.ts",
+      "import": "./dist/lib/geometry/algebraic/Cone.js",
+      "default": "./dist/lib/geometry/algebraic/Cone.js"
     },
-    "./geometry/Cylinder": {
-      "types": "./dist/lib/geometry/Cylinder.d.ts",
-      "import": "./dist/lib/geometry/Cylinder.js",
-      "default": "./dist/lib/geometry/Cylinder.js"
+    "./geometry/algebraic/Cylinder": {
+      "types": "./dist/lib/geometry/algebraic/Cylinder.d.ts",
+      "import": "./dist/lib/geometry/algebraic/Cylinder.js",
+      "default": "./dist/lib/geometry/algebraic/Cylinder.js"
     },
-    "./geometry/Sphere": {
-      "types": "./dist/lib/geometry/Sphere.d.ts",
-      "import": "./dist/lib/geometry/Sphere.js",
-      "default": "./dist/lib/geometry/Sphere.js"
+    "./geometry/algebraic/Sphere": {
+      "types": "./dist/lib/geometry/algebraic/Sphere.d.ts",
+      "import": "./dist/lib/geometry/algebraic/Sphere.js",
+      "default": "./dist/lib/geometry/algebraic/Sphere.js"
     },
     "./geometry/euclidean/Plane": {
       "types": "./dist/lib/geometry/euclidean/Plane.d.ts",
