chore: start nx migration

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nx/esbuild": "20.5.0",
-    "@nx/eslint": "20.5.0",
-    "@nx/eslint-plugin": "20.5.0",
-    "@nx/js": "20.5.0",
-    "@nx/vite": "20.5.0",
-    "@nx/web": "20.5.0",
+    "@nx/esbuild": "21.1.2",
+    "@nx/eslint": "21.1.2",
+    "@nx/eslint-plugin": "21.1.2",
+    "@nx/js": "21.1.2",
+    "@nx/vite": "21.1.2",
+    "@nx/web": "21.1.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -28,10 +28,10 @@
     "electron": "^35.0.1",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.5",
     "jiti": "2.4.2",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "20.5.0",
+    "nx": "21.1.2",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
