--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     },
     {
       "path": "./packages/electron-ext"
+    },
+    {
+      "path": "./packages/cause/cause-effect"
     }
   ]
 }
