build(@ckapp/nx-effect): add service generator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     },
     {
       "path": "./packages/cause/cause-effect"
+    },
+    {
+      "path": "./tools/@ckapp/nx-effect"
     }
   ]
 }
