--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nx/devkit": "21.1.2",
     "effect": "^3.15.4",
     "rxjs": "^7.8.2"
   },
@@ -17,9 +18,11 @@
     "@nx/eslint": "21.1.2",
     "@nx/eslint-plugin": "21.1.2",
     "@nx/js": "21.1.2",
+    "@nx/plugin": "21.1.2",
     "@nx/vite": "21.1.2",
     "@nx/web": "21.1.2",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "18.16.9",
@@ -30,6 +33,7 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "10.1.5",
     "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.1.2",
     "prettier": "^2.6.2",
