--- a/nx.json
+++ b/nx.json
@@ -57,6 +57,11 @@
     },
     "test": {
       "dependsOn": ["^build", "^build"]
+    },
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
   "generators": {
